syntax = "proto3";

import "spiderrock_common.proto";


package spiderrock.protobuf;

import "google/protobuf/timestamp.proto";

    
message SOQStrikeRangeUpdate {
    message PKey {
        
        TickerKey ticker = 10; // Underlying symbol
        string soq_identifier = 11; // SOQ dissemination symbol
    }


    MessageMetadata _meta = 1;
    
    PKey pkey = 2;
    float lower_strike_prc = 100; // SOQ lower strike price
    float upper_strike_prc = 103; // SOQ upper strike price
    int64 src_timestamp = 106; // exchange high precision timestamp (if available)
    int64 net_timestamp = 109; // inbound packet PTP timestamp from SR gateway switch;usually syncronized with f
    google.protobuf.Timestamp timestamp = 112;
}


